--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@adiwajshing/keyed-db": "^0.2.4",
     "@colors/colors": "^1.5.0",
     "@hapi/boom": "^10.0.0",
-     "baileys-pro": "^0.0.5",
+     "@whiskeysockets/baileys": "^6.7.7",
     "awesome-phonenumber": "^2.64.0",
     "@vreden/youtube_scraper": "^1.2.0",
     "axios": "^0.24.0",
